hphp/test/zend/bad/Zend/tests/declare_001.php
<?php

declare(encoding = 1);
declare(encoding = 112313123213131232100);
declare(encoding = NULL);
declare(encoding = 'utf-8');
declare(encoding = M_PI);

print 'DONE';

?>